--- a/grupo1.html
+++ b/grupo1.html
@@ -14,7 +14,7 @@
     <!-- Top Menu -->
     <div class="title-bar">
       <div class="title-bar-left">
-        <button class="menu-icon" type="button"></button>
+          <button class="menu-icon" type="button"></button>
       </div>
       <div class="title-bar-right">
         <ul class="dropdown menu" data-dropdown-menu>
@@ -35,10 +35,10 @@
         <!-- Side menu -->
         <div class="medium-3 columns">
           <ul class="vertical dropdown menu cad-menu" data-dropdown-menu style="max-width: 300px;">
-            <li><a href="index.html">Grupos<span class="secondary badge">61</span></a></li>
-            <li><a href="grupo.html"><i class="fi-play"></i> Grupo 1<span class="secondary badge">20</span></a></li>
-            <li><a href="grupo.html"><i class="fi-play"></i> Grupo 2<span class="secondary badge">19</span></a></li>
-            <li><a href="grupo.html"><i class="fi-play"></i> Grupo 3<span class="secondary badge">22</span></a></li>
+            <li><a href="grupos.html">Grupos<span class="secondary badge">61</span></a></li>
+            <li><a href="grupo1.html"><i class="fi-play"></i> Grupo 1<span class="secondary badge">20</span></a></li>
+            <li><a href="grupo2.html"><i class="fi-play"></i> Grupo 2<span class="secondary badge">19</span></a></li>
+            <li><a href="grupo3.html"><i class="fi-play"></i> Grupo 3<span class="secondary badge">22</span></a></li>
           </ul>
         </div>
 
@@ -46,12 +46,12 @@
         <!-- END Side menu -->
 
         <div class="medium-9 columns">
-          <h1 class="cad-title">Grupo 3</h1>
+          <h1 class="cad-title">Grupo 1</h1>
           <a><i class="fi-pencil cad-icon edit"></i></a>
           <a><i class="fi-trash cad-icon delete"></i></a>
           <div class="success progress" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="25 percent" aria-valuemax="100">
-            <span class="progress-meter" style="width: 25%">
-              <p class="progress-meter-text">25%</p>
+              <span class="progress-meter" style="width: 89%">
+              <p class="progress-meter-text">89%</p>
             </span>
           </div>
 
