--- a/grupo.html
+++ b/grupo.html
@@ -140,9 +140,19 @@
             </tbody>
           </table>
         </div>
-
-
+      <p><a data-toggle="exampleModal1">Click me for a modal</a></p>
     </div>
+
+    <!-- Modals-->
+    <div class="reveal" id="exampleModal1" data-reveal>
+  <h1>Awesome. I Have It.</h1>
+  <p class="lead">Your couch. It is mine.</p>
+  <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
+  <button class="close-button" data-close aria-label="Close modal" type="button">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/what-input/2.1.1/what-input.js"></script>
     <script src="https://cdn.jsdelivr.net/foundation/6.2.3/foundation.min.js"></script>
