--- a/grupo1.html
+++ b/grupo1.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Panel de profesores | Briko</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.3/foundation.min.css" />
-    <link rel="stylesheet" href="stylesheets/style.css" />
     <link rel="stylesheet" href="vendor/foundation-icons.css" />
-  </head>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+    <link rel="stylesheet" href="stylesheets/style.css" />
   <body>
 
     <!-- Top Menu -->
@@ -140,9 +140,15 @@
             </tbody>
           </table>
         </div>
-
+        
+        <div class="medium-9 columns">
+            <h2 class="cad-title">Comprension de Temas</h2>
+            <div class="ct-chart ct-perfect-fourth"></div>
+        </div>
 
     </div>
+    <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+    <script src="js/graf.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/what-input/2.1.1/what-input.js"></script>
     <script src="https://cdn.jsdelivr.net/foundation/6.2.3/foundation.min.js"></script>
