Add charts with chartist.js

--- a/grupo1.html
+++ b/grupo1.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Panel de profesores | Briko</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.3/foundation.min.css" />
-    <link rel="stylesheet" href="stylesheets/style.css" />
     <link rel="stylesheet" href="vendor/foundation-icons.css" />
-  </head>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+    <link rel="stylesheet" href="stylesheets/style.css" />
   <body>
 
     <!-- Top Menu -->
@@ -140,19 +140,25 @@
             </tbody>
           </table>
         </div>
-      <p><a data-toggle="exampleModal1">Click me for a modal</a></p>
+        <p><a data-toggle="exampleModal1">Click me for a modal</a></p>
+        <div class="medium-9 columns">
+            <h2 class="cad-title">Comprension de Temas</h2>
+            <div class="ct-chart ct-perfect-fourth"></div>
+        </div>
     </div>
 
     <!-- Modals-->
     <div class="reveal" id="exampleModal1" data-reveal>
-  <h1>Awesome. I Have It.</h1>
-  <p class="lead">Your couch. It is mine.</p>
-  <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
-  <button class="close-button" data-close aria-label="Close modal" type="button">
-    <span aria-hidden="true">&times;</span>
-  </button>
-</div>
-
+        <h1>Awesome. I Have It.</h1>
+        <p class="lead">Your couch. It is mine.</p>
+        <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
+        <button class="close-button" data-close aria-label="Close modal" type="button">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+        
+    <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+    <script src="js/graf.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/what-input/2.1.1/what-input.js"></script>
     <script src="https://cdn.jsdelivr.net/foundation/6.2.3/foundation.min.js"></script>
