Added 'temas.html' view (and maybe other changes)

--- a/grupo1.html
+++ b/grupo1.html
@@ -40,6 +40,9 @@
             <li><a href="grupo2.html"><i class="fi-play"></i> Grupo 2<span class="secondary badge">19</span></a></li>
             <li><a href="grupo3.html"><i class="fi-play"></i> Grupo 3<span class="secondary badge">22</span></a></li>
           </ul>
+          <div class="row">
+            <a data-toggle="add-group"><i class="fi-plus cad-add-group"></i></a>
+          </div>
         </div>
 
 
@@ -139,13 +142,15 @@
               
             </tbody>
           </table>
+          <div class="row">
+            <a><i class="fi-plus cad-add-student"></i></a>
+          </div>
         </div>
-      <p><a data-toggle="exampleModal1">Click me for a modal</a></p>
     </div>
 
-    <!-- Modals-->
-    <div class="reveal" id="exampleModal1" data-reveal>
-  <h1>Awesome. I Have It.</h1>
+<!-- Modals-->
+<div class="reveal" id="add-group" data-reveal>
+  <h1 style="text-align:center">Agregar grupo</h1>
   <p class="lead">Your couch. It is mine.</p>
   <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
   <button class="close-button" data-close aria-label="Close modal" type="button">
