--- a/grupo3.html
+++ b/grupo3.html
@@ -24,7 +24,6 @@
                         <button type="button"> <i class="fi-page-export cad-icon log"></i> Log Out</button>
                     </li>
                 </ul>
-
             </div>
         </div>
         <!-- END Top Menu -->
@@ -40,6 +39,10 @@
                     <li><a href="grupo2.html"><i class="fi-play"></i> Grupo 2<span class="secondary badge">19</span></a></li>
                     <li><a href="grupo3.html"><i class="fi-play"></i> Grupo 3<span class="secondary badge">22</span></a></li>
                 </ul>
+                <div class="row">
+                  <a><i class="fi-plus cad-add-group"></i></a>
+                </div>
+
             </div>
 
 
@@ -139,6 +142,9 @@
 
                     </tbody>
                 </table>
+                <div class="row">
+                  <a><i class="fi-plus cad-add-student"></i></a>
+                </div>
             </div>
 
 
