--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
         <!-- Side menu -->
         <div class="medium-3 columns">
           <ul class="vertical dropdown menu cad-menu" data-dropdown-menu style="max-width: 300px;">
-            <li><a href="index.html">Grupos<span class="secondary badge">61</span></a></li>
-            <li><a href="grupo.html"><i class="fi-play"></i> Grupo 1<span class="secondary badge">20</span></a></li>
-            <li><a href="grupo.html"><i class="fi-play"></i> Grupo 2<span class="secondary badge">19</span></a></li>
-            <li><a href="grupo.html"><i class="fi-play"></i> Grupo 3<span class="secondary badge">22</span></a></li>
+            <li><a href="grupos.html">Grupos<span class="secondary badge">61</span></a></li>
+            <li><a href="grupo1.html"><i class="fi-play"></i> Grupo 1<span class="secondary badge">20</span></a></li>
+            <li><a href="grupo2.html"><i class="fi-play"></i> Grupo 2<span class="secondary badge">19</span></a></li>
+            <li><a href="grupo3.html"><i class="fi-play"></i> Grupo 3<span class="secondary badge">22</span></a></li>
           </ul>
+          <div class="row">
+            <a><i class="fi-plus cad-add-group"></i></a>
+          </div>
         </div>
 
 
