--- a/grupo2.html
+++ b/grupo2.html
@@ -40,6 +40,9 @@
                     <li><a href="grupo2.html"><i class="fi-play"></i> Grupo 2<span class="secondary badge">19</span></a></li>
                     <li><a href="grupo3.html"><i class="fi-play"></i> Grupo 3<span class="secondary badge">22</span></a></li>
                 </ul>
+                <div class="row">
+                  <a><i class="fi-plus cad-add-group"></i></a>
+                </div>
             </div>
 
 
@@ -139,6 +142,9 @@
 
                     </tbody>
                 </table>
+                <div class="row">
+                  <a><i class="fi-plus cad-add-student"></i></a>
+                </div>
             </div>
 
 
