--- a/grupo1.html
+++ b/grupo1.html
@@ -154,9 +154,15 @@
 
 <!-- Modals-->
 <div class="reveal" id="add-group" data-reveal>
-  <h1 style="text-align:center">Agregar grupo</h1>
-  <p class="lead">Your couch. It is mine.</p>
-  <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
+  <h2 class="cad-modal-title" style="text-align:center">Agregar grupo</h1>
+  <form class="cad-form">
+    <div class="row">
+      <label>Nombre del grupo
+        <input type="text">
+      </label>
+    </div>
+     <input type="submit" class="button cad-submit" value="Aceptar">
+</form>
   <button class="close-button" data-close aria-label="Close modal" type="button">
     <span aria-hidden="true">&times;</span>
   </button>
