--- a/grupos.html
+++ b/grupos.html
@@ -7,7 +7,7 @@
         <title>Panel de profesores | Briko</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.3/foundation.min.css" />
         <link rel="stylesheet" href="vendor/foundation-icons.css" />
-        <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
         <link rel="stylesheet" href="stylesheets/style.css" />
     </head>
     <body>
@@ -91,14 +91,14 @@
             
             <div class="medium-9 columns">
                 <h2 class="cad-title">Comprension de Temas</h2>
-                <div class="ct-chart ct-perfect-fourth"></div>
+                <div class="ct-chart"></div>
             </div>
             
         </div>
-        <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/what-input/2.1.1/what-input.js"></script>
         <script src="https://cdn.jsdelivr.net/foundation/6.2.3/foundation.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
         <script src="js/graf.js"></script>
         <script>
             $(document).foundation();
