--- a/grupo2.html
+++ b/grupo2.html
@@ -53,6 +53,7 @@
                 <h1 class="cad-title">Grupo 2</h1>
                 <a><i class="fi-pencil cad-icon edit"></i></a>
                 <a><i class="fi-trash cad-icon delete"></i></a>
+                <a class="button" href="temas.html" style="float:right; margin-top:10px">Ir a temas</a>
                 <div class="alert progress" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="25 percent" aria-valuemax="100">
                     <span class="progress-meter" style="width: 69%">
                         <p class="progress-meter-text">69%</p>
