--- a/grupo1.html
+++ b/grupo1.html
@@ -50,8 +50,8 @@
 
         <div class="medium-9 columns">
           <h1 class="cad-title">Grupo 1</h1>
-          <a><i class="fi-pencil cad-icon edit"></i></a>
-          <a><i class="fi-trash cad-icon delete"></i></a>
+          <a data-toggle="edit-group"><i class="fi-pencil cad-icon edit"></i></a>
+          <a data-toggle="delete-group"><i class="fi-trash cad-icon delete"></i></a>
           <a class="button" href="temas.html" style="float:right; margin-top:10px">Ir a temas</a>
           <div class="success progress" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="25 percent" aria-valuemax="100">
               <span class="progress-meter" style="width: 89%">
@@ -82,8 +82,8 @@
                 <td>5</td>
                 <td>2</td>
                 <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
-                <td><a><i class="fi-pencil cad-icon edit"></i></a></td>
-                <td><a><i class="fi-trash cad-icon delete"></i></a></td>
+                <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
+                <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
               </tr>
               <tr>
                 <td><i class="fi-torso cad-icon user"></i> Clifton Fenton</td>
@@ -93,8 +93,8 @@
                 <td>3</td>
                 <td>2</td>
                 <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
-                <td><a><i class="fi-pencil cad-icon edit"></i></a></td>
-                <td><a><i class="fi-trash cad-icon delete"></i></a></td>
+                <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
+                <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
               </tr>
               <tr>
                 <td><i class="fi-torso cad-icon user"></i> Whitaker Giffard</td>
@@ -104,8 +104,8 @@
                 <td>4</td>
                 <td>3</td>
                 <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
-                <td><a><i class="fi-pencil cad-icon edit"></i></a></td>
-                <td><a><i class="fi-trash cad-icon delete"></i></a></td>
+                <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
+                <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
               </tr>
               <tr>
                 <td><i class="fi-torso cad-icon user"></i> Brendon Kelley</td>
@@ -115,8 +115,8 @@
                 <td>5</td>
                 <td>3</td>
                 <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
-                <td><a><i class="fi-pencil cad-icon edit"></i></a></td>
-                <td><a><i class="fi-trash cad-icon delete"></i></a></td>
+                <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
+                <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
               </tr>
               <tr>
                 <td><i class="fi-torso cad-icon user"></i> Colbert Kurt</td>
@@ -126,8 +126,8 @@
                 <td>5</td>
                 <td>5</td>
                 <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
-                <td><a><i class="fi-pencil cad-icon edit"></i></a></td>
-                <td><a><i class="fi-trash cad-icon delete"></i></a></td>
+                <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
+                <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
               </tr>
               <tr>
                 <td><i class="fi-torso cad-icon user"></i> Doug Jaiden</td>
@@ -137,14 +137,14 @@
                 <td>2</td>
                 <td>1</td>
                 <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
-                <td><a><i class="fi-pencil cad-icon edit"></i></a></td>
-                <td><a><i class="fi-trash cad-icon delete"></i></a></td>
+                <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
+                <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
               </tr>
               
             </tbody>
           </table>
           <div class="row">
-            <a><i class="fi-plus cad-add-student"></i></a>
+            <a data-toggle="add-student"><i class="fi-plus cad-add-student"></i></a>
           </div>
         </div>
           <div class="medium-9 columns">
@@ -155,7 +155,7 @@
 
 <!-- Modals-->
 <div class="reveal" id="add-group" data-reveal>
-  <h2 class="cad-modal-title" style="text-align:center">Agregar grupo</h1>
+  <h2 class="cad-modal-title" style="text-align:center">Agregar grupo</h2>
   <form class="cad-form">
     <div class="row">
       <label>Nombre del grupo
@@ -164,6 +164,101 @@
     </div>
      <input type="submit" class="button cad-submit" value="Aceptar">
 </form>
+  <button class="close-button" data-close aria-label="Close modal" type="button">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
+<div class="reveal" id="edit-group" data-reveal>
+  <h2 class="cad-modal-title" style="text-align:center">Editar grupo</h2>
+  <form class="cad-form">
+    <div class="row">
+      <label>Nombre del grupo
+        <input type="text" value="Grupo 1">
+      </label>
+    </div>
+     <input type="submit" class="button cad-submit" value="Aceptar">
+</form>
+  <button class="close-button" data-close aria-label="Close modal" type="button">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
+<div class="reveal" id="delete-group" data-reveal>
+  <br>
+  <h3 class="cad-modal-title" style="text-align:center">¿Seguro que desea eliminar este grupo y desvincular todos sus alumnos?</h3>
+  <br>
+  <button class="button cad-submit" data-close>Aceptar</button>
+  <button class="button cad-submit delete" data-close>Cancelar</button>
+  <button class="close-button" data-close aria-label="Close modal" type="button">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
+<div class="reveal" id="add-student" data-reveal>
+  <h2 class="cad-modal-title" style="text-align:center">Agregar alumno</h2>
+  <form class="cad-form">
+    <div class="row">
+      <label>Usuario
+        <input type="text">
+      </label>
+    </div>
+    <div class="row">
+      <label>Nombre del alumno
+        <input type="text">
+      </label>
+    </div>
+    <div class="row">
+      <label>Grupo
+        <select>
+          <option value="1">Grupo 1</option>
+          <option value="2">Grupo 2</option>
+          <option value="3">Grupo 3</option>
+        </select>
+      </label>
+    </div>
+     <input type="submit" class="button cad-submit" value="Aceptar">
+</form>
+  <button class="close-button" data-close aria-label="Close modal" type="button">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
+<div class="reveal" id="edit-student" data-reveal>
+  <h2 class="cad-modal-title" style="text-align:center">Editar alumno</h2>
+  <form class="cad-form">
+    <div class="row">
+      <label>Usuario
+        <input type="text" value="MarinL33">
+      </label>
+    </div>
+    <div class="row">
+      <label>Nombre del alumno
+        <input type="text" value="Marin Leonardo">
+      </label>
+    </div>
+    <div class="row">
+      <label>Grupo
+        <select>
+          <option value="1">Grupo 1</option>
+          <option value="2" selected>Grupo 2</option>
+          <option value="3">Grupo 3</option>
+        </select>
+      </label>
+    </div>
+     <input type="submit" class="button cad-submit" value="Aceptar">
+</form>
+  <button class="close-button" data-close aria-label="Close modal" type="button">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
+<div class="reveal" id="delete-student" data-reveal>
+  <br>
+  <h3 class="cad-modal-title" style="text-align:center">¿Seguro que desea desvincular este alumno?</h3>
+  <br>
+  <button class="button cad-submit" data-close>Aceptar</button>
+  <button class="button cad-submit delete" data-close>Cancelar</button>
   <button class="close-button" data-close aria-label="Close modal" type="button">
     <span aria-hidden="true">&times;</span>
   </button>
