Changed 'boy' image to a briko defalut

--- a/alumno.html
+++ b/alumno.html
@@ -53,21 +53,21 @@
           <a data-toggle="edit-group"><i class="fi-pencil cad-icon edit"></i></a>
           <a data-toggle="delete-group"><i class="fi-trash cad-icon delete"></i></a>
 
-
-
         </div>
           <div class="medium-9 columns">
-            <div class="medium-2 columns"><img src="boy.svg" alt="Smiley face" style="width:128px;height:128px;"></div>
-            <div class="medium-4 columns"><h4 class="cad-title">Esteban Quito</h4> <h6 class="cad-title">A01151855</h6></div>
-            <div class="medium-3 columns" style="text-align:left"><h6 class="cad-title"></h6></div>
-            <div class="medium-10 columns" style="text-align:left"><h6 class="cad-title">Grupo 2</h6></div>
+            <div class="cad-user-image columns">
+              <img id="usuimagmin" class="imgcircc" style="z-index:-1" alt="Logo briko link pagina principal" src="https://brikorobotics.com/uploads/userimages/0.png">
+              <div style="position:relative; width:144px">
+                <img id="marco" style="position:absolute; top:-130px; right:14px" alt="Logo briko link pagina principal" src="https://brikorobotics.com/images/mainlog/perfil_marco.png">
+              </div>
+            </div>
+            <div class="cad-user-name columns">
+              <h4 class="cad-title">Esteban Quito</h4> <h6 class="cad-title">A01151855</h6><br>
+              <h6 class="cad-title">Grupo 2</h6>
+            </div>
             <div class="medium-12 columns" style="text-align:left"><img src="target.gif" alt="Smiley face" style="width:540px;height:190px;"></div>
+          </div>
     </div>
-
-
-
-
-
 
 <!-- Modals-->
 <div class="reveal" id="add-group" data-reveal>
