Added briko layout to alumnos.html instead of target.gif

--- a/alumno.html
+++ b/alumno.html
@@ -55,19 +55,54 @@
 
         </div>
           <div class="medium-9 columns">
-            <div class="cad-user-image columns">
-              <img id="usuimagmin" class="imgcircc" style="z-index:-1" alt="Logo briko link pagina principal" src="https://brikorobotics.com/uploads/userimages/0.png">
-              <div style="position:relative; width:144px">
-                <img id="marco" style="position:absolute; top:-130px; right:14px" alt="Logo briko link pagina principal" src="https://brikorobotics.com/images/mainlog/perfil_marco.png">
+            <div class="medium-12 columns">
+              <div class="row" style="background: #356799; border: 3px solid white;border-radius:15px; padding-bottom: 20px; padding-top: 15px;">
+                <div class="cad-user-image columns">
+                  <img id="usuimagmin" class="imgcircc" style="z-index:-1" alt="Logo briko link pagina principal" src="https://brikorobotics.com/uploads/userimages/0.png">
+                  <div style="position:relative; width:144px">
+                    <img id="marco" style="position:absolute; top:-130px; right:14px" alt="Logo briko link pagina principal" src="https://brikorobotics.com/images/mainlog/perfil_marco.png">
+                  </div>
+                </div>
+                <div class="cad-user-name columns">
+                  <h4 class="cad-title">Esteban Quito</h4> <h6 class="cad-title">A01151855</h6><br>
+                  <h6 class="cad-title">Grupo 2</h6>
+                </div>
               </div>
             </div>
-            <div class="cad-user-name columns">
-              <h4 class="cad-title">Esteban Quito</h4> <h6 class="cad-title">A01151855</h6><br>
-              <h6 class="cad-title">Grupo 2</h6>
+            <div class="medium-12 columns">
+              <div class="row" style="background: #356799; border: 3px solid white;border-radius:15px;margin-top:30px;" data-equalizer="" data-equalizer-mq="small-down large-up">
+                <div class="columns small-2" style="margin-top: 0px; padding: 0px; z-index: 10; height: 179px;" data-equalizer-watch="">
+                  <center>
+                    <img style="width:80%;margin-top:10px;position:relative;z-index:1;" alt="Logo briko link pagina principal" src="https://brikorobotics.com/images/dashboard/escudo1.png">
+                    <p class="ptextbk3" style="color:white;margin-bottom:5px;">Nivel 1</p>
+                  </center>
+                </div>
+                <div class="columns small-8 posrelx" style="padding: 0px; height: 179px;" data-equalizer-watch="">
+                  <div class="row marginxxk" style="margin-bottom:0px;margin-left:0px;margin-right:0px;">  
+                    <center style="margin-bottom:0px;">
+                      <img style="width:9%;margin-right:10px;margin-bottom:1px;margin-left:10px;" alt="Logo briko link pagina principal" src="https://brikorobotics.com/images/mainlog/estrella.png">
+                      <img style="width:9%;margin-right:10px;margin-bottom:1px;" alt="Logo briko link pagina principal" src="https://brikorobotics.com/images/mainlog/estrella_inactiva.png">
+                      <img style="width:9%;margin-right:10px;margin-bottom:1px;" alt="Logo briko link pagina principal" src="https://brikorobotics.com/images/mainlog/estrella_inactiva.png">
+                      <img style="width:9%;margin-right:10px;margin-bottom:1px;" alt="Logo briko link pagina principal" src="https://brikorobotics.com/images/mainlog/estrella_inactiva.png">
+                      <img style="width:9%;margin-right:10px;margin-bottom:1px;" alt="Logo briko link pagina principal" src="https://brikorobotics.com/images/mainlog/estrella_inactiva.png">
+                    </center>
+                  </div>
+                  <div class="row" style="margin-left:15px;margin-right:15px;margin-bottom:2px;">
+                    <center style="margin-top:4%;">
+                      <div id="barloadcontainer"><svg viewBox="0 0 100 4" preserveAspectRatio="none" style="width: 100%; height: 100%;"><path d="M 0,2 L 100,2" stroke="rgba(53, 103, 153, .0)" stroke-width="4" fill-opacity="0"></path><path d="M 0,2 L 100,2" stroke="#fff" stroke-width="4" fill-opacity="0" style="stroke-dasharray: 100, 100; stroke-dashoffset: 100;"></path></svg></div> 
+                      <p class="ptextbk3" style="color:#fff;margin-bottom:0px;">XP <span style="color:#fff;" class="ptextbk3">0/1000</span></p>
+                    </center>
+                  </div>  
+                </div>
+                <div class="columns small-2 posrelx2" style="margin-top: 0px; padding: 0px; height: 179px;" data-equalizer-watch="">
+                  <center>
+                    <img style="width:80%;margin-top:10px;" alt="Logo briko link pagina principal" src="https://brikorobotics.com/images/dashboard/moneda.png">
+                    <p class="ptextbk3" style="color:white;margin-bottom:5px;">X 500</p>
+                  </center>
+                </div>
+              </div>
             </div>
-            <div class="medium-12 columns" style="text-align:left"><img src="target.gif" alt="Smiley face" style="width:540px;height:190px;"></div>
           </div>
-    </div>
 
 <!-- Modals-->
 <div class="reveal" id="add-group" data-reveal>
@@ -183,6 +218,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/what-input/2.1.1/what-input.js"></script>
         <script src="https://cdn.jsdelivr.net/foundation/6.2.3/foundation.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.4/plugins/foundation.equalizer.js"></script>
         <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
         <script src="js/graf.js"></script>
         <script>
