Added lower part in alumno.html

--- a/alumno.html
+++ b/alumno.html
@@ -102,6 +102,74 @@
                 </div>
               </div>
             </div>
+
+            <div class="medium-12 columns">
+              <div class="row" style="margin-top:30px; background: #DFE7EF; border: 3px solid white;border-radius:15px; padding-bottom: 20px; padding-top: 15px;">
+                <div class="medium-6 small-6 columns" align="center">
+                  <div class="cad-card">
+                    <p class="ptextbk3 cad-number">7</p>
+                    <img src="https://brikorobotics.com/images/iconosheader/temas.png" class="cad-image" alt="imgproy">
+                  </div>
+                  <ul class="accordion" data-accordion style="text-align:left; margin-top:40px">
+                    <li class="accordion-item is-active" data-accordion-item>
+                      <a href="#" class="accordion-title cad-accordion-title">Brikos <span class="cad-info">(5/5)</span></a>
+                      <div class="accordion-content" data-tab-content>
+                        <h5><i class="fi-check cad-done"></i> <span>Leds</span></h5>
+                        <h5><i class="fi-check cad-done"></i> <span>Sensor de distancia</span></h5>
+                        <h5><i class="fi-check cad-done"></i> <span>Botones</span></h5>
+                        <h5><i class="fi-check cad-done"></i> <span>Motores</span></h5>
+                        <h5><i class="fi-check cad-done"></i> <span>Bocina</span></h5>
+                      </div>
+                    </li>
+                    <li class="accordion-item" data-accordion-item>
+                      <a href="#" class="accordion-title cad-accordion-title">Nivel 1 <span class="cad-info">(2/3)</span></a>
+                      <div class="accordion-content" data-tab-content>
+                        <h5><i class="fi-check cad-done"></i> <span>Introducción a programación</span></h5>
+                        <h5><i class="fi-check cad-done"></i> <span>Pausas y comentarios</span></h5>
+                        <h5><i class="fi-x cad-not-done"></i> <span>Variables</span></h5>
+                      </div>
+                    </li>
+                    <li class="accordion-item" data-accordion-item>
+                      <a href="#" class="accordion-title cad-accordion-title">Nivel 2 <span class="cad-info">(0/3)</span></a>
+                      <div class="accordion-content" data-tab-content>
+                        <h5><i class="fi-x cad-not-done"></i> <span>Movimiento</span></h5>
+                        <h5><i class="fi-x cad-not-done"></i> <span>Operaciones aritméticas</span></h5>
+                        <h5><i class="fi-x cad-not-done"></i> <span>IF</span></h5>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+                <div class="medium-6 small-6 columns" align="center">
+                  <div class="cad-card">
+                    <p class="ptextbk3 cad-number">2</p>
+                    <img src="https://brikorobotics.com/images/iconosheader/proyectos.png" class="cad-image" alt="imgproy">
+                  </div>
+                  <ul class="accordion" data-accordion style="text-align:left; margin-top:40px">
+                    <li class="accordion-item is-active" data-accordion-item>
+                      <a href="#" class="accordion-title cad-accordion-title">Nivel 1 <span class="cad-info">(2/2)</span></a>
+                      <div class="accordion-content" data-tab-content>
+                        <h5><i class="fi-check cad-done"></i> <span>Artbot</span></h5>
+                        <h5><i class="fi-check cad-done"></i> <span>Rockola</span></h5>
+                      </div>
+                    </li>
+                    <li class="accordion-item" data-accordion-item>
+                      <a href="#" class="accordion-title cad-accordion-title">Nivel 2 <span class="cad-info">(0/2)</span></a>
+                      <div class="accordion-content" data-tab-content>
+                        <h5><i class="fi-x cad-not-done"></i> <span>Casa</span></h5>
+                        <h5><i class="fi-x cad-not-done"></i> <span>Sumo</span></h5>
+                      </div>
+                    </li>
+                    <li class="accordion-item" data-accordion-item>
+                      <a href="#" class="accordion-title cad-accordion-title">Nivel 3 <span class="cad-info">(0/1)</span></a>
+                      <div class="accordion-content" data-tab-content>
+                        <h5><i class="fi-x cad-not-done"></i> <span>Sumo</span></h5>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+
           </div>
 
 <!-- Modals-->
