--- a/grupo2.html
+++ b/grupo2.html
@@ -42,7 +42,7 @@
                     <li><a href="grupo3.html"><i class="fi-play"></i> Grupo 3<span class="secondary badge">22</span></a></li>
                 </ul>
                 <div class="row">
-                  <a><i class="fi-plus cad-add-group"></i></a>
+                  <a data-toggle="add-group"><i class="fi-plus cad-add-group"></i></a>
                 </div>
             </div>
 
@@ -51,8 +51,8 @@
 
             <div class="medium-9 columns">
                 <h1 class="cad-title">Grupo 2</h1>
-                <a><i class="fi-pencil cad-icon edit"></i></a>
-                <a><i class="fi-trash cad-icon delete"></i></a>
+                <a data-toggle="edit-group"><i class="fi-pencil cad-icon edit"></i></a>
+                <a data-toggle="delete-group"><i class="fi-trash cad-icon delete"></i></a>
                 <a class="button" href="temas.html" style="float:right; margin-top:10px">Ir a temas</a>
                 <div class="alert progress" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="25 percent" aria-valuemax="100">
                     <span class="progress-meter" style="width: 69%">
@@ -83,8 +83,8 @@
                             <td>5</td>
                             <td>2</td>
                             <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
-                            <td><a><i class="fi-pencil cad-icon edit"></i></a></td>
-                            <td><a><i class="fi-trash cad-icon delete"></i></a></td>
+                            <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
+                            <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
                         </tr>
                         <tr>
                             <td><i class="fi-torso cad-icon user"></i> Clifton Fenton</td>
@@ -94,8 +94,8 @@
                             <td>3</td>
                             <td>2</td>
                             <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
-                            <td><a><i class="fi-pencil cad-icon edit"></i></a></td>
-                            <td><a><i class="fi-trash cad-icon delete"></i></a></td>
+                            <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
+                            <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
                         </tr>
                         <tr>
                             <td><i class="fi-torso cad-icon user"></i> Whitaker Giffard</td>
@@ -105,8 +105,8 @@
                             <td>4</td>
                             <td>3</td>
                             <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
-                            <td><a><i class="fi-pencil cad-icon edit"></i></a></td>
-                            <td><a><i class="fi-trash cad-icon delete"></i></a></td>
+                            <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
+                            <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
                         </tr>
                         <tr>
                             <td><i class="fi-torso cad-icon user"></i> Brendon Kelley</td>
@@ -116,8 +116,8 @@
                             <td>5</td>
                             <td>3</td>
                             <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
-                            <td><a><i class="fi-pencil cad-icon edit"></i></a></td>
-                            <td><a><i class="fi-trash cad-icon delete"></i></a></td>
+                            <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
+                            <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
                         </tr>
                         <tr>
                             <td><i class="fi-torso cad-icon user"></i> Colbert Kurt</td>
@@ -127,8 +127,8 @@
                             <td>5</td>
                             <td>5</td>
                             <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
-                            <td><a><i class="fi-pencil cad-icon edit"></i></a></td>
-                            <td><a><i class="fi-trash cad-icon delete"></i></a></td>
+                            <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
+                            <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
                         </tr>
                         <tr>
                             <td><i class="fi-torso cad-icon user"></i> Doug Jaiden</td>
@@ -138,14 +138,14 @@
                             <td>2</td>
                             <td>1</td>
                             <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
-                            <td><a><i class="fi-pencil cad-icon edit"></i></a></td>
-                            <td><a><i class="fi-trash cad-icon delete"></i></a></td>
+                            <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
+                            <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
                         </tr>
 
                     </tbody>
                 </table>
                 <div class="row">
-                  <a><i class="fi-plus cad-add-student"></i></a>
+                  <a data-toggle="add-student"><i class="fi-plus cad-add-student"></i></a>
                 </div>
             </div>
             <div class="medium-9 columns">
@@ -156,6 +156,117 @@
 
 
         </div>
+
+<!-- Modals-->
+<div class="reveal" id="add-group" data-reveal>
+  <h2 class="cad-modal-title" style="text-align:center">Agregar grupo</h2>
+  <form class="cad-form">
+    <div class="row">
+      <label>Nombre del grupo
+        <input type="text">
+      </label>
+    </div>
+     <input type="submit" class="button cad-submit" value="Aceptar">
+</form>
+  <button class="close-button" data-close aria-label="Close modal" type="button">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
+<div class="reveal" id="edit-group" data-reveal>
+  <h2 class="cad-modal-title" style="text-align:center">Editar grupo</h2>
+  <form class="cad-form">
+    <div class="row">
+      <label>Nombre del grupo
+        <input type="text" value="Grupo 2">
+      </label>
+    </div>
+     <input type="submit" class="button cad-submit" value="Aceptar">
+</form>
+  <button class="close-button" data-close aria-label="Close modal" type="button">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
+<div class="reveal" id="delete-group" data-reveal>
+  <br>
+  <h3 class="cad-modal-title" style="text-align:center">¿Seguro que desea eliminar este grupo y desvincular todos sus alumnos?</h3>
+  <br>
+  <button class="button cad-submit" data-close>Aceptar</button>
+  <button class="button cad-submit delete" data-close>Cancelar</button>
+  <button class="close-button" data-close aria-label="Close modal" type="button">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
+<div class="reveal" id="add-student" data-reveal>
+  <h2 class="cad-modal-title" style="text-align:center">Agregar alumno</h2>
+  <form class="cad-form">
+    <div class="row">
+      <label>Usuario
+        <input type="text">
+      </label>
+    </div>
+    <div class="row">
+      <label>Nombre del alumno
+        <input type="text">
+      </label>
+    </div>
+    <div class="row">
+      <label>Grupo
+        <select>
+          <option value="1">Grupo 1</option>
+          <option value="2" selected>Grupo 2</option>
+          <option value="3">Grupo 3</option>
+        </select>
+      </label>
+    </div>
+     <input type="submit" class="button cad-submit" value="Aceptar">
+</form>
+  <button class="close-button" data-close aria-label="Close modal" type="button">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
+<div class="reveal" id="edit-student" data-reveal>
+  <h2 class="cad-modal-title" style="text-align:center">Editar alumno</h2>
+  <form class="cad-form">
+    <div class="row">
+      <label>Usuario
+        <input type="text" value="MarinL33">
+      </label>
+    </div>
+    <div class="row">
+      <label>Nombre del alumno
+        <input type="text" value="Marin Leonardo">
+      </label>
+    </div>
+    <div class="row">
+      <label>Grupo
+        <select>
+          <option value="1">Grupo 1</option>
+          <option value="2" selected>Grupo 2</option>
+          <option value="3">Grupo 3</option>
+        </select>
+      </label>
+    </div>
+     <input type="submit" class="button cad-submit" value="Aceptar">
+</form>
+  <button class="close-button" data-close aria-label="Close modal" type="button">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
+<div class="reveal" id="delete-student" data-reveal>
+  <br>
+  <h3 class="cad-modal-title" style="text-align:center">¿Seguro que desea desvincular este alumno?</h3>
+  <br>
+  <button class="button cad-submit" data-close>Aceptar</button>
+  <button class="button cad-submit delete" data-close>Cancelar</button>
+  <button class="close-button" data-close aria-label="Close modal" type="button">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/what-input/2.1.1/what-input.js"></script>
