Added links to 'alumno.html'

--- a/grupo2.html
+++ b/grupo2.html
@@ -82,7 +82,7 @@
                             <td>500</td>
                             <td>5</td>
                             <td>2</td>
-                            <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
+                            <td><a href="alumno.html"><i class="fi-magnifying-glass cad-icon view"></i></a></td>
                             <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
                             <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
                         </tr>
@@ -93,7 +93,7 @@
                             <td>600</td>
                             <td>3</td>
                             <td>2</td>
-                            <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
+                            <td><a href="alumno.html"><i class="fi-magnifying-glass cad-icon view"></i></a></td>
                             <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
                             <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
                         </tr>
@@ -104,7 +104,7 @@
                             <td>560</td>
                             <td>4</td>
                             <td>3</td>
-                            <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
+                            <td><a href="alumno.html"><i class="fi-magnifying-glass cad-icon view"></i></a></td>
                             <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
                             <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
                         </tr>
@@ -115,7 +115,7 @@
                             <td>600</td>
                             <td>5</td>
                             <td>3</td>
-                            <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
+                            <td><a href="alumno.html"><i class="fi-magnifying-glass cad-icon view"></i></a></td>
                             <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
                             <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
                         </tr>
@@ -126,7 +126,7 @@
                             <td>590</td>
                             <td>5</td>
                             <td>5</td>
-                            <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
+                            <td><a href="alumno.html"><i class="fi-magnifying-glass cad-icon view"></i></a></td>
                             <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
                             <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
                         </tr>
@@ -137,7 +137,7 @@
                             <td>200</td>
                             <td>2</td>
                             <td>1</td>
-                            <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
+                            <td><a href="alumno.html"><i class="fi-magnifying-glass cad-icon view"></i></a></td>
                             <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
                             <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
                         </tr>
