--- a/grupo1.html
+++ b/grupo1.html
@@ -81,7 +81,7 @@
                 <td>500</td>
                 <td>5</td>
                 <td>2</td>
-                <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
+                <td><a href="alumno.html"><i class="fi-magnifying-glass cad-icon view"></i></a></td>
                 <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
                 <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
               </tr>
@@ -92,7 +92,7 @@
                 <td>600</td>
                 <td>3</td>
                 <td>2</td>
-                <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
+                <td><a href="alumno.html"><i class="fi-magnifying-glass cad-icon view"></i></a></td>
                 <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
                 <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
               </tr>
@@ -103,7 +103,7 @@
                 <td>560</td>
                 <td>4</td>
                 <td>3</td>
-                <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
+                <td><a href="alumno.html"><i class="fi-magnifying-glass cad-icon view"></i></a></td>
                 <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
                 <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
               </tr>
@@ -114,7 +114,7 @@
                 <td>600</td>
                 <td>5</td>
                 <td>3</td>
-                <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
+                <td><a href="alumno.html"><i class="fi-magnifying-glass cad-icon view"></i></a></td>
                 <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
                 <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
               </tr>
@@ -125,7 +125,7 @@
                 <td>590</td>
                 <td>5</td>
                 <td>5</td>
-                <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
+                <td><a href="alumno.html"><i class="fi-magnifying-glass cad-icon view"></i></a></td>
                 <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
                 <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
               </tr>
@@ -136,7 +136,7 @@
                 <td>200</td>
                 <td>2</td>
                 <td>1</td>
-                <td><a><i class="fi-magnifying-glass cad-icon view"></i></a></td>
+                <td><a href="alumno.html"><i class="fi-magnifying-glass cad-icon view"></i></a></td>
                 <td><a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a></td>
                 <td><a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a></td>
               </tr>
